--- a/.github/workflows/test-go.yaml
+++ b/.github/workflows/test-go.yaml
@@ -17,6 +17,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         go-version: ['^1.17.0']
+        mysql: ["mysql:5.7", "mysql:8"]
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -31,7 +32,7 @@ jobs:
     # Pre-starting dependencies here means they are ready to go when we need them.
     - name: Start Infra Dependencies
       # Use & to background this
-      run: docker-compose up -d mysql_test redis redis-cluster-1 redis-cluster-2 redis-cluster-3 redis-cluster-4 redis-cluster-5 redis-cluster-6 redis-cluster-setup &
+      run: FLEET_MYSQL_IMAGE=${{ matrix.mysql }} docker-compose up -d mysql_test redis redis-cluster-1 redis-cluster-2 redis-cluster-3 redis-cluster-4 redis-cluster-5 redis-cluster-6 redis-cluster-setup &
 
     # It seems faster not to cache Go dependencies
     - name: Install Go Dependencies
