feat: Job based migrations on pre install and upgrade
- Use fleet and command instead of shell

--- a/charts/fleet/templates/deployment.yaml
+++ b/charts/fleet/templates/deployment.yaml
@@ -31,15 +31,8 @@ spec:
     spec:
       containers:
       - name: fleet
-        command:
-        {{- if .Values.fleet.autoApplySQLMigrations }}
-        - /bin/sh
-        - -c
-        - /usr/bin/fleet prepare db --no-prompt && /usr/bin/fleet serve
-        {{ else }}
-        - /usr/bin/fleet
-        - serve
-        {{- end }}
+        command: [/usr/bin/fleet]
+        args: ["serve"]
         image: fleetdm/fleet:{{ .Values.imageTag }}
         ports:
         - name: fleet
