--- a/charts/fleet/values.yaml
+++ b/charts/fleet/values.yaml
@@ -44,8 +44,7 @@ fleet:
   # Name of the Secret resource storing TLS and S3 bucket secrets
   secretName: fleet
   # Whether or not to run `fleet db prepare` to run SQL migrations before starting Fleet
-  # WARNING: This may cause database corruption if more than one migration is attempted at a time
-  autoApplySQLMigrations: false
+  autoApplySQLMigrations: true
   tls:
     enabled: true
     compatibility: modern
