--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-ace": "9.3.0",
     "react-dom": "^16",
     "react-entity-getter": "0.0.8",
+    "react-error-boundary": "^3.1.4",
     "react-query": "^3.19.2",
     "react-redux": "7.2.2",
     "react-router": "^3.0.0",
