Disable link checking for more sites
gusto, crunchbase, and angellist

relates to https://github.com/fleetdm/fleet/pull/3999#issuecomment-1028545628

--- a/.github/workflows/markdown-link-check-config.json
+++ b/.github/workflows/markdown-link-check-config.json
@@ -32,6 +32,15 @@
     },
     {
       "pattern": "goreportcard.com"
+    },
+    {
+      "pattern": "gusto.com"
+    },
+    {
+      "pattern": "crunchbase.com"
+    },
+    {
+      "pattern": "angel.co"
     }
   ],
   "retryOn429": true,
