--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -6,4 +6,8 @@ go.mod @fleetdm/go
 /server/ @fleetdm/go
 /cmd/ @fleetdm/go
 
+# Infra/terraform
 *.tf @edwardsb
+
+# GitHub settings + actions
+/.github/ @zwass
