--- a/.github/workflows/update-certs.yml
+++ b/.github/workflows/update-certs.yml
@@ -28,4 +28,7 @@ jobs:
         branch: update-ca-certs
         delete-branch: true
         title: Update Orbit CA certs [automated]
-        commit-message: Generated automatically with curl mk-ca-bundle.pl script.
+        commit-message: |
+          Update Orbit CA certs [automated]
+
+          Generated automatically with curl mk-ca-bundle.pl script.
