--- a/.github/workflows/test-go.yaml
+++ b/.github/workflows/test-go.yaml
@@ -50,6 +50,7 @@ jobs:
 
     - name: Set Go race setting
       if: github.event.schedule != '0 4 * * *'
+      run: echo "Running go tests with race enabled"
       env:
         RACE_ENABLED: true
 
