--- a/docs/01-Using-Fleet/standard-query-library/standard-query-library.yml
+++ b/docs/01-Using-Fleet/standard-query-library/standard-query-library.yml
@@ -673,7 +673,7 @@ kind: policy
 spec:
   name: System Integrity Protection enabled (macOS)
   query: SELECT 1 FROM sip_config WHERE config_flag = 'sip' AND enabled = 1;
-  description: Checks to make sure that the SIP feature is enabled.
+  description: Checks to make sure that the System Integrity Protection feature is enabled.
   resolution: "To enable System Integrity Protection, on the failing device, run the following command in the Terminal app: /usr/sbin/spctl --master-enable."
   platforms: macOS
   contributors: groob
