Update windows disk encryption

--- a/docs/01-Using-Fleet/standard-query-library/standard-query-library.yml
+++ b/docs/01-Using-Fleet/standard-query-library/standard-query-library.yml
@@ -649,7 +649,7 @@ kind: policy
 spec:
   name: Full disk encryption enabled (Windows)
   query: SELECT 1 FROM bitlocker_info where protection_status = 1;
-  description: Checks to make sure that device encryption is enabled on Windows devices.
+  description: Checks to make sure that full device encryption is enabled.
   resolution: "To get additional information, run the following osquery query on the failing device: SELECT * FROM bitlocker_info. In the
   query results, if protection_status is 2, then the status cannot be determined. If it is 0, it is
   considered unprotected. Use the additional results (percent_encrypted, conversion_status, etc.) to
@@ -662,7 +662,7 @@ kind: policy
 spec:
   name: Full disk encryption enabled (macOS)
   query: SELECT 1 FROM disk_encryption WHERE user_uuid IS NOT "" AND filevault_status = 'on' LIMIT 1;
-  description: Checks to make sure that the Filevault feature is enabled on macOS devices.
+  description: Checks to make sure that full disk encryption is enabled on macOS devices.
   resolution: "To enable full disk encryption, on the failing device, select System Preferences >
   Security & Privacy > FileVault > Turn On FileVault."
   platforms: macOS
