Make requested changes

--- a/docs/01-Using-Fleet/standard-query-library/standard-query-library.yml
+++ b/docs/01-Using-Fleet/standard-query-library/standard-query-library.yml
@@ -662,7 +662,7 @@ kind: policy
 spec:
   name: Full disk encryption enabled (macOS)
   query: SELECT 1 FROM disk_encryption WHERE user_uuid IS NOT "" AND filevault_status = 'on' LIMIT 1;
-  description: Checks to make sure that full disk encryption is enabled on macOS devices.
+  description: Checks to make sure that full disk encryption (Filevault) is enabled on macOS devices.
   resolution: "To enable full disk encryption, on the failing device, select System Preferences >
   Security & Privacy > FileVault > Turn On FileVault."
   platforms: macOS
@@ -701,7 +701,7 @@ spec:
 apiVersion: v1
 kind: policy
 spec:
-  name: Secure keyboard entry enabled (macOS)
+  name: Secure keyboard entry for Terminal.app enabled (macOS)
   query: SELECT 1 FROM managed_policies WHERE domain = 'com.apple.Terminal' AND name = 'SecureKeyboardEntry' AND value = 1 LIMIT 1;
   description: "Required: You’re already enforcing a policy via Moble Device Management (MDM). Checks to make sure that the Secure Keyboard Entry setting is enabled."
   platforms: macOS
