--- a/.github/workflows/test-go.yaml
+++ b/.github/workflows/test-go.yaml
@@ -63,3 +63,25 @@ jobs:
       uses: codecov/codecov-action@v2
       with:
         files: coverage.txt
+
+    - name: Slack Notification
+      # Will add the below line after I tested.
+      # if: ${{ github.event.schedule == '0 4 * * *' && failure() }}
+      uses: slackapi/slack-github-action@v1.18.0
+      with:
+        payload: |
+          {
+            "text": "${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}",
+            "blocks": [
+              {
+                "type": "section",
+                "text": {
+                  "type": "mrkdwn",
+                  "text": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+                }
+              }
+            ]
+          }
+      env:
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_CORE_ENGINEERING_WEBHOOK_URL }}
+        SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
