--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,8 +2,23 @@ apiVersion: v1
 entries:
   fleet:
   - apiVersion: v1
+    appVersion: v4.10.0
+    created: "2022-02-14T02:55:32.224779688Z"
+    description: A Helm chart for Fleet
+    digest: 7784d01dfd8521a2f59dc8b76aaed6978d2fbfeeca8a3d5d47b4e00af1f67fce
+    home: https://github.com/fleetdm/fleet
+    keywords:
+    - fleet
+    - osquery
+    name: fleet
+    sources:
+    - https://github.com/fleetdm/fleet.git
+    urls:
+    - https://fleetdm.github.io/fleet/charts/fleet-v4.10.0.tgz
+    version: v4.10.0
+  - apiVersion: v1
     appVersion: v4.9.1
-    created: "2022-02-03T00:23:42.973428864Z"
+    created: "2022-02-14T02:55:32.250858841Z"
     description: A Helm chart for Fleet
     digest: f22993c94e5d358324a92791c54ebd061b38c2377d13c65c26a59ebd526d60a9
     home: https://github.com/fleetdm/fleet
@@ -18,7 +33,7 @@ entries:
     version: v4.9.1
   - apiVersion: v1
     appVersion: v4.9.0
-    created: "2022-02-03T00:23:42.972076055Z"
+    created: "2022-02-14T02:55:32.249874671Z"
     description: A Helm chart for Fleet
     digest: 2238ad6b6105115209271b05ebd91fb3d5363f0523b6269a771366565475f0c7
     home: https://github.com/fleetdm/fleet
@@ -33,7 +48,7 @@ entries:
     version: v4.9.0
   - apiVersion: v1
     appVersion: v4.8.0
-    created: "2022-02-03T00:23:42.970725647Z"
+    created: "2022-02-14T02:55:32.248677286Z"
     description: A Helm chart for Fleet
     digest: f32af640a0cecf8ea69d3d026267be0fc004274a878bb77e32b4465209b9b2e6
     home: https://github.com/fleetdm/fleet
@@ -48,7 +63,7 @@ entries:
     version: v4.8.0
   - apiVersion: v1
     appVersion: v4.7.0
-    created: "2022-02-03T00:23:42.969688241Z"
+    created: "2022-02-14T02:55:32.247582308Z"
     description: A Helm chart for Fleet
     digest: c0c1370b2a609951f2f9f2af291229dbfbd7c06cc6e4b86047bcf12b78a7d60c
     home: https://github.com/fleetdm/fleet
@@ -63,7 +78,7 @@ entries:
     version: v4.7.0
   - apiVersion: v1
     appVersion: v4.6.2
-    created: "2022-02-03T00:23:42.968927436Z"
+    created: "2022-02-14T02:55:32.246519433Z"
     description: A Helm chart for Fleet
     digest: d17b98985591bcfaed4aebf3aa40a10e8742610bc7e2914b55fd305b4a60c376
     home: https://github.com/fleetdm/fleet
@@ -78,7 +93,7 @@ entries:
     version: v4.6.2
   - apiVersion: v1
     appVersion: v4.6.1
-    created: "2022-02-03T00:23:42.968148531Z"
+    created: "2022-02-14T02:55:32.24521094Z"
     description: A Helm chart for Fleet
     digest: f6045628dffec7d4b3e0d4fe58349a4a42139513773f61a3ab3069bfbf59461f
     home: https://github.com/fleetdm/fleet
@@ -93,7 +108,7 @@ entries:
     version: v4.6.1
   - apiVersion: v1
     appVersion: v4.6.0
-    created: "2022-02-03T00:23:42.967245026Z"
+    created: "2022-02-14T02:55:32.243715733Z"
     description: A Helm chart for Fleet
     digest: 74837469ca0d56f3bee6241009a65bd6e3e0871fef984fdf24ab0ce231992ed1
     home: https://github.com/fleetdm/fleet
@@ -108,7 +123,7 @@ entries:
     version: v4.6.0
   - apiVersion: v1
     appVersion: v4.5.1
-    created: "2022-02-03T00:23:42.966471821Z"
+    created: "2022-02-14T02:55:32.242066016Z"
     description: A Helm chart for Fleet
     digest: 6d769e7eadb1786dab8e8afbdd335bcfe1381672bc87390848676299d889673c
     home: https://github.com/fleetdm/fleet
@@ -123,7 +138,7 @@ entries:
     version: v4.5.1
   - apiVersion: v1
     appVersion: v4.5.0
-    created: "2022-02-03T00:23:42.965729417Z"
+    created: "2022-02-14T02:55:32.241010341Z"
     description: A Helm chart for Fleet
     digest: a35d954fb0ab25fc9a26ef4c2e1490d5b8b6d5e5ae6679afdbaf75a05a2b048c
     home: https://github.com/fleetdm/fleet
@@ -138,7 +153,7 @@ entries:
     version: v4.5.0
   - apiVersion: v1
     appVersion: v4.4.3
-    created: "2022-02-03T00:23:42.964974412Z"
+    created: "2022-02-14T02:55:32.239939565Z"
     description: A Helm chart for Fleet
     digest: da21b7e8a5af6399af0a8be14e831fd067c4b6ef8b0118f84b8b4f8f29c41494
     home: https://github.com/fleetdm/fleet
@@ -153,7 +168,7 @@ entries:
     version: v4.4.3
   - apiVersion: v1
     appVersion: v4.4.2
-    created: "2022-02-03T00:23:42.964227608Z"
+    created: "2022-02-14T02:55:32.23888729Z"
     description: A Helm chart for Fleet
     digest: 6ec224c2ea857326d8498409e879ed1943b582a2a85cbeb96494ff70c93bc4cd
     home: https://github.com/fleetdm/fleet
@@ -168,7 +183,7 @@ entries:
     version: v4.4.2
   - apiVersion: v1
     appVersion: v4.4.1
-    created: "2022-02-03T00:23:42.963438503Z"
+    created: "2022-02-14T02:55:32.237724708Z"
     description: A Helm chart for Fleet
     digest: d4e07cd52304d0f1ce887ff8843b231db0fbf3a474f0b12629f24370b0f85fcc
     home: https://github.com/fleetdm/fleet
@@ -183,7 +198,7 @@ entries:
     version: v4.4.1
   - apiVersion: v1
     appVersion: v4.4.0
-    created: "2022-02-03T00:23:42.962620698Z"
+    created: "2022-02-14T02:55:32.236505021Z"
     description: A Helm chart for Fleet
     digest: c72f4d3b088195cf09247cbee0da545ce8903275d82ecf801caf50e9c4d6f7aa
     home: https://github.com/fleetdm/fleet
@@ -198,7 +213,7 @@ entries:
     version: v4.4.0
   - apiVersion: v1
     appVersion: v4.3.2
-    created: "2022-02-03T00:23:42.961826793Z"
+    created: "2022-02-14T02:55:32.235482849Z"
     description: A Helm chart for Fleet
     digest: 4b7c770616ff52688eaea2b979c6df518e6aaabe7c627be74a04a2a552883868
     home: https://github.com/fleetdm/fleet
@@ -213,7 +228,7 @@ entries:
     version: v4.3.2
   - apiVersion: v1
     appVersion: v4.3.1
-    created: "2022-02-03T00:23:42.960641386Z"
+    created: "2022-02-14T02:55:32.234391471Z"
     description: A Helm chart for Fleet
     digest: 0c01a1cb4ca07bbebe77bc2985cc409dffb343bb12631c71032c6b9477abee77
     home: https://github.com/fleetdm/fleet
@@ -228,7 +243,7 @@ entries:
     version: v4.3.1
   - apiVersion: v1
     appVersion: v4.3.0
-    created: "2022-02-03T00:23:42.958885775Z"
+    created: "2022-02-14T02:55:32.233408701Z"
     description: A Helm chart for Fleet
     digest: 65519bb5d2dd5b1b5950fdedd2b01157233385ec849978c8420b2f292aced49f
     home: https://github.com/fleetdm/fleet
@@ -243,7 +258,7 @@ entries:
     version: v4.3.0
   - apiVersion: v1
     appVersion: v4.2.4
-    created: "2022-02-03T00:23:42.95809757Z"
+    created: "2022-02-14T02:55:32.232327525Z"
     description: A Helm chart for Fleet
     digest: 77ad990623c58c53ef16109a7154a5c4993e8e30e268bf7837175192c590f191
     home: https://github.com/fleetdm/fleet
@@ -258,7 +273,7 @@ entries:
     version: v4.2.4
   - apiVersion: v1
     appVersion: v4.2.3
-    created: "2022-02-03T00:23:42.957327466Z"
+    created: "2022-02-14T02:55:32.231239347Z"
     description: A Helm chart for Fleet
     digest: 06bf1c0ed4be9f88156e26cee0476638d3322a736ea1783f46752b540ce9896d
     home: https://github.com/fleetdm/fleet
@@ -273,7 +288,7 @@ entries:
     version: v4.2.3
   - apiVersion: v1
     appVersion: v4.2.2
-    created: "2022-02-03T00:23:42.956513161Z"
+    created: "2022-02-14T02:55:32.230126868Z"
     description: A Helm chart for Fleet
     digest: 413e42ac901013604099680404f1ea66ffe9f9eb61ec6d627249c87cf17834cc
     home: https://github.com/fleetdm/fleet
@@ -288,7 +303,7 @@ entries:
     version: v4.2.2
   - apiVersion: v1
     appVersion: v4.2.1
-    created: "2022-02-03T00:23:42.955158453Z"
+    created: "2022-02-14T02:55:32.228256435Z"
     description: A Helm chart for Fleet
     digest: 53efe4ebf5037b3ec898d205fcd52197ab3917fd0557ac53ab94e44005103b7f
     home: https://github.com/fleetdm/fleet
@@ -303,7 +318,7 @@ entries:
     version: v4.2.1
   - apiVersion: v1
     appVersion: v4.2.0
-    created: "2022-02-03T00:23:42.954359748Z"
+    created: "2022-02-14T02:55:32.225862865Z"
     description: A Helm chart for Fleet
     digest: a79c5ff7f51cce8fb783d4f133ca7d9b8a13afaa00a30e1dd8687bf592b066cc
     home: https://github.com/fleetdm/fleet
@@ -318,7 +333,7 @@ entries:
     version: v4.2.0
   - apiVersion: v1
     appVersion: v4.1.0
-    created: "2022-02-03T00:23:42.953579543Z"
+    created: "2022-02-14T02:55:32.223692711Z"
     description: A Helm chart for Fleet
     digest: 153a557d6e028de20737b5c926e5b83cfa13062e4a1e181fbcfcca7a45d7da82
     home: https://github.com/fleetdm/fleet
@@ -333,7 +348,7 @@ entries:
     version: v4.1.0
   - apiVersion: v1
     appVersion: v4.0.1
-    created: "2022-02-03T00:23:42.952808138Z"
+    created: "2022-02-14T02:55:32.222634636Z"
     description: A Helm chart for Fleet
     digest: 658d14ec23500f8a51b4223a2cb3c1c237290a53d4d96ea538f0f6ab2d668aff
     home: https://github.com/fleetdm/fleet
@@ -348,7 +363,7 @@ entries:
     version: v4.0.1
   - apiVersion: v1
     appVersion: v4.0.0
-    created: "2022-02-03T00:23:42.951997233Z"
+    created: "2022-02-14T02:55:32.221587162Z"
     description: A Helm chart for Fleet
     digest: 2fdfa130b9129d91b66cf8d8555f3aee2dac2b555109fba47014163a9dfa9693
     home: https://github.com/fleetdm/fleet
@@ -363,7 +378,7 @@ entries:
     version: v4.0.0
   - apiVersion: v1
     appVersion: 3.13.0
-    created: "2022-02-03T00:23:42.950530424Z"
+    created: "2022-02-14T02:55:32.219547117Z"
     description: A Helm chart for Fleet
     digest: 267e5d03f072d7dd9e28bc195eaa0efc1338e7eb067e7ee2e9f4dcd9f74437e5
     home: https://github.com/fleetdm/fleet
@@ -378,7 +393,7 @@ entries:
     version: 3.13.0
   - apiVersion: v1
     appVersion: 3.12.0
-    created: "2022-02-03T00:23:42.949561919Z"
+    created: "2022-02-14T02:55:32.218458539Z"
     description: A Helm chart for Fleet
     digest: e6cf7bf7b0937a38b5421b50dfeb915fbcd1e352e8bd38f3a276fc4dedd3c466
     home: https://github.com/fleetdm/fleet
@@ -393,7 +408,7 @@ entries:
     version: 3.12.0
   - apiVersion: v1
     appVersion: 3.11.0
-    created: "2022-02-03T00:23:42.948436912Z"
+    created: "2022-02-14T02:55:32.217306758Z"
     description: A Helm chart for Fleet
     digest: 739e2764437c1ca87314128c094277154d539c75c9d566b94cba874493b9d50d
     home: https://github.com/fleetdm/fleet
@@ -408,7 +423,7 @@ entries:
     version: 3.11.0
   - apiVersion: v1
     appVersion: 3.10.1
-    created: "2022-02-03T00:23:42.947310705Z"
+    created: "2022-02-14T02:55:32.21621368Z"
     description: A Helm chart for Fleet
     digest: 5ecd45f5b975d29194a27cb81c5c2edb14831d9a618f73907c002d25a6e5e634
     home: https://github.com/fleetdm/fleet
@@ -423,7 +438,7 @@ entries:
     version: 3.10.1
   - apiVersion: v1
     appVersion: 3.10.0
-    created: "2022-02-03T00:23:42.945930996Z"
+    created: "2022-02-14T02:55:32.215152205Z"
     description: A Helm chart for Fleet
     digest: 743341bcd5b93270e40295214bb73ba43f7820cf509dc091f4d18d97c17b2641
     home: https://github.com/fleetdm/fleet
@@ -438,7 +453,7 @@ entries:
     version: 3.10.0
   - apiVersion: v1
     appVersion: 3.9.0
-    created: "2022-02-03T00:23:42.951239729Z"
+    created: "2022-02-14T02:55:32.220531387Z"
     description: A Helm chart for Fleet
     digest: 911937bbb967a7b6478eae890553ecba88f18f2d53f8a33fb39f6dda206ff84f
     home: https://github.com/fleetdm/fleet
@@ -451,4 +466,4 @@ entries:
     urls:
     - https://fleetdm.github.io/fleet/charts/fleet-3.9.0.tgz
     version: 3.9.0
-generated: "2022-02-03T00:23:42.944717989Z"
+generated: "2022-02-14T02:55:32.213868013Z"
