--- a/.github/workflows/test-go.yaml
+++ b/.github/workflows/test-go.yaml
@@ -1,5 +1,9 @@
 name: Go Tests
 
+env:
+  # Every day at 4 AM, for running go tests with -race.
+  CRON_SCHEDULE: '0 4 * * *'
+
 on:
   push:
     branches:
@@ -12,7 +16,7 @@ on:
       - '**.go'
   workflow_dispatch: # Manual
   schedule:
-      - cron: '0 4 * * *' # every day at 4 AM, for running go tests with -race
+      - cron: $CRON_SCHEDULE
 
 jobs:
   test-go:
@@ -50,7 +54,7 @@ jobs:
         make generate-go
 
     - name: Set Go race setting on schedule
-      if: github.event.schedule == '0 4 * * *'
+      if: github.event.schedule == $CRON_SCHEDULE
       run: echo "Running go tests with race enabled"
       env:
         RACE_ENABLED: true
@@ -66,7 +70,7 @@ jobs:
 
     - name: Slack Notification
       # Will add the below line after I tested.
-      # if: ${{ github.event.schedule == '0 4 * * *' && failure() }}
+      # if: ${{ github.event.schedule == $CRON_SCHEDULE && failure() }}
       uses: slackapi/slack-github-action@v1.18.0
       with:
         payload: |
