Try setting cron as usual

--- a/.github/workflows/test-go.yaml
+++ b/.github/workflows/test-go.yaml
@@ -15,7 +15,7 @@ on:
       - '**.go'
   workflow_dispatch: # Manual
   schedule:
-    - cron: '${{ CRON_SCHEDULE }}'
+    - cron: '0 4 * * *'
 
 jobs:
   test-go:
