--- a/.github/workflows/test-go.yaml
+++ b/.github/workflows/test-go.yaml
@@ -1,8 +1,5 @@
 name: Go Tests
 
-env:
-  CRON_SCHEDULE: 0 4 * * *
-
 on:
   push:
     branches:
@@ -53,7 +50,7 @@ jobs:
         make generate-go
 
     - name: Set Go race setting on schedule
-      if: github.event.schedule == $CRON_SCHEDULE
+      if: github.event.schedule == '0 4 * * *'
       run: echo "Running go tests with race enabled"
       env:
         RACE_ENABLED: true
@@ -69,7 +66,7 @@ jobs:
 
     - name: Slack Notification
       # Will add the below line after I tested.
-      # if: ${{ github.event.schedule == $CRON_SCHEDULE && failure() }}
+      # if: ${{ github.event.schedule == '0 4 * * *' && failure() }}
       uses: slackapi/slack-github-action@v1.18.0
       with:
         payload: |
