Run with race enable to test

--- a/.github/workflows/test-go.yaml
+++ b/.github/workflows/test-go.yaml
@@ -24,7 +24,7 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     env:
-      RACE_ENABLED: false
+      RACE_ENABLED: true
 
     steps:
     - name: Install Go
