--- a/.github/workflows/test-go.yaml
+++ b/.github/workflows/test-go.yaml
@@ -72,13 +72,13 @@ jobs:
       with:
         payload: |
           {
-            "text": "${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}",
+            "text": "${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head.html_url }}",
             "blocks": [
               {
                 "type": "section",
                 "text": {
                   "type": "mrkdwn",
-                  "text": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+                  "text": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head.html_url }}"
                 }
               }
             ]
