Revert logic after testing

--- a/.github/workflows/test-go.yaml
+++ b/.github/workflows/test-go.yaml
@@ -51,7 +51,7 @@ jobs:
         make generate-go
 
     - name: Set Go race setting on schedule
-      if: github.event.schedule != '0 4 * * *'
+      if: github.event.schedule == '0 4 * * *'
       run: |
         echo "RACE_ENABLED=true" >> $GITHUB_ENV
         echo "GO_TEST_TIMEOUT=1h" >> $GITHUB_ENV
